--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript">
 		  
 	function onLoad(){
-		var ref = window.open('http://jasnp6.aasa.com.pe/COMOVSAP/', '_blank', 'location=no');
+		var ref = window.open('https://jasnp6.aasa.com.pe/COMOVSAP/', '_blank', 'location=no');
 	}		
 	
    </script>
